Fix issue the screen is not entirely visible - Refactory - cleaning unnecessary z-index

--- a/web/src/modules/main/index.css
+++ b/web/src/modules/main/index.css
@@ -1,4 +1,6 @@
 .apply-z-index-1 {
    position: relative;
    z-index: 1;
+   white-space: nowrap;
+   text-overflow: ellipsis;
 }
